policies/allow-monitoring-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring
  namespace: microservice-app
spec:
  podSelector: {} 
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080  
        - protocol: TCP
          port: 8000 
        - protocol: TCP
          port: 8082 
        - protocol: TCP
          port: 8083 
        - protocol: TCP
          port: 9121
