policies/default-deny-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: microservice-app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
