policies/frontend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  namespace: microservice-app
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {} 
    - from:
        - podSelector:
            matchLabels:
              app: users-api
      ports:
        - port: 8000
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: auth-api
      ports:
        - port: 8000
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app: todos-api
      ports:
        - port: 8082
          protocol: TCP
