policies/log-message-processor-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: log-message-processor-policy
  namespace: microservice-app
spec:
  podSelector:
    matchLabels:
      app: log-message-processor
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}  
  egress:

    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - port: 6379
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
