policies/redis-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-policy
  namespace: microservice-app
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: todos-api
        - podSelector:
            matchLabels:
              app: log-message-processor
      ports:
        - port: 6379
          protocol: TCP
