policies/users-api-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: users-api-policy
  namespace: microservice-app
spec:
  podSelector:
    matchLabels:
      app: users-api
  policyTypes:
    - Ingress
    - Egress
  ingress:

    - from:
        - podSelector:
            matchLabels:
              app: auth-api
      ports:
        - port: 8083
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 8080
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - port: 6379
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
